<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_dark">

    <TextView
        android:id="@+id/markets_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_small"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/markets"
        android:textColor="@color/text_light"
        android:textSize="@dimen/text_size_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/market_mxn_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/market_mxn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/markets_txt"
        style="@style/style_check_box" />

    <CheckBox
        android:id="@+id/market_bitcoin_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_bitcoin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/market_mxn_checkbox"
        style="@style/style_check_box"/>

    <CheckBox
        android:id="@+id/market_usd_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_usd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/market_bitcoin_checkbox"
        style="@style/style_check_box" />

    <CheckBox
        android:id="@+id/market_dai_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_dai"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/market_mxn_checkbox"
        style="@style/style_check_box" />

    <CheckBox
        android:id="@+id/market_arg_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_arg"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/market_dai_checkbox"
        style="@style/style_check_box" />

    <CheckBox
        android:id="@+id/market_brl_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_brl"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/market_arg_checkbox"
        style="@style/style_check_box" />

    <TextView
        android:id="@+id/cryptos_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_huge"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/cryptocurrencies"
        android:textColor="@color/text_light"
        android:textSize="@dimen/text_size_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/market_usd_checkbox" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cryptocurrencies_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_big"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cryptos_txt" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loaderAnimationView"
        android:layout_width="@dimen/loader_size"
        android:layout_height="@dimen/loader_size"
        android:layout_gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cryptos_txt"
        app:layout_constraintVertical_bias="0.45"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loader_cryptos" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>